# PDS-T1000-TSA24

./: .gitignore  .replit  AI_SYSTEM_GUIDE.md  BUILD_README.md  CMakeLists.txt  COMPLETE_SYSTEM_DOCUMENTATION.md  DEVELOPER_GUIDE.md  ESP32_SETUP_GUIDE.md  ESP_COMMUNICATION_GUIDE.md  F5_Monitor2.bat  FARB_UND_KAMERA_ERKENNUNG_DOKUMENTATION.md  FINAL_OPTIMIERUNG.md  Farberkennung.py  KAMERA_INTEGRATION.md  KOORDINATEN_SCHNITTSTELLEN.md  KOORDINATEN_SYSTEM_DOKUMENTATION.md  Kamera.py  Makefile  Makefile.uart  NEUE_VERSION_README.md  PROJEKTDOKUMENTATION.md  README.md  SETUP.md  START_SYSTEM.bat  SYSTEM_TEST_GUIDE.md  TECHNICAL_DOCS.md  UART_SETUP_README.md  build.bat  build_json_to_esp32.bat  build_uart_sender.bat  coordinates.json  esp32_uart_bridge.ino  test_commands.json  vehicle_commands.json
.git copy/: COMMIT_EDITMSG  FETCH_HEAD  config  index  shallow
.git copy/logs/: HEAD
.git copy/logs/refs/heads/: main  replit-agent
.git copy/logs/refs/remotes/origin/: main
.git copy/objects/pack/: pack-cf190659f6ddcc45b0c837685d89759032d58e0e.idx  pack-cf190659f6ddcc45b0c837685d89759032d58e0e.pack  pack-cf190659f6ddcc45b0c837685d89759032d58e0e.rev
.git copy/refs/heads/: main  replit-agent
.git copy/refs/remotes/origin/: main
docs/: README.md
esp_vehicle/: CMakeLists.txt  sdkconfig
esp_vehicle/main/: main.cpp
include/: BeamerProjection.h  CameraDisplay.h  MultiCarDisplay.h  RaylibPythonAdder.h  Vehicle.h  VehicleFleet.h  auto.h  car_simulation.h  coordinate_filter.h  coordinate_filter_fast.h  path_system.h  point.h  py_runner.h  renderer.h  segment_manager.h  serial_communication.h  test_window.h  uart_communication.h  vehicle_controller.h
main/: CMakeLists.txt  main_esp.cpp
main/main/: CMakeLists.txt
src/: BeamerProjection.cpp  CameraDisplay.cpp  Farberkennung.py  Kamera.py  MultiCarDisplay.cpp  MultiVehicleKamera.py  RaylibPythonAdder.cpp  Vehicle.cpp  VehicleFleet.cpp  auto.cpp  car_simulation.cpp  car_simulation_clean.cpp  color_detection_camera.py  color_detection_camera_trackbar.py  coordinate_filter.cpp  coordinate_filter_fast.cpp  debug_main.cpp  direction_speed_sender.cpp  json_all_vehicles.cpp  json_monitor_debug.cpp  json_sender_simple.cpp  json_to_esp32.cpp  main.cpp  path_system.cpp  point.cpp  py_runner.cpp  renderer.cpp  segment_manager.cpp  serial_communication.cpp  test_window.cpp  uart_communication.cpp  uart_sender.cpp  uart_testen.cpp  vehicle_controller.cpp
